my_hardware_accelerator/my_hardware_accelerator/my_hardware_accelerator.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2020.1 (64-bit)
Copyright 1986-2020 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'my_hardware_accelerator/my_code.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from my_hardware_accelerator/my_code.cpp:1:
my_hardware_accelerator/my_code.cpp:8:1: error: unknown type name 'typdef'; did you mean 'typedef'?
typdef struct ap_axi{
^
my_hardware_accelerator/my_code.cpp:8:8: error: expected unqualified-id
typdef struct ap_axi{
       ^
my_hardware_accelerator/my_code.cpp:13:2: error: C++ requires a type specifier for all declarations
}ap_axi;
 ^~~~~~
my_hardware_accelerator/my_code.cpp:16:6: error: variable has incomplete type 'void'
void hardware_accelerator(ap_axi IN[10], ap_axi OUT[10]){
     ^
my_hardware_accelerator/my_code.cpp:16:57: error: expected ';' after top level declarator
void hardware_accelerator(ap_axi IN[10], ap_axi OUT[10]){
                                                        ^
                                                        ;
5 errors generated.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2020.1 (64-bit)
Copyright 1986-2020 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'my_hardware_accelerator/my_code.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from my_hardware_accelerator/my_code.cpp:1:
my_hardware_accelerator/my_code.cpp:25:24: error: invalid operands to binary expression ('ap_axi' and 'int')
        OUT[i] = IN[i] + 0xff;
                 ~~~~~ ^ ~~~~
...
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2020.1 (64-bit)
Copyright 1986-2020 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'my_hardware_accelerator/my_code.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from my_hardware_accelerator/my_code.cpp:1:
my_hardware_accelerator/my_code.cpp:25:24: error: invalid operands to binary expression ('ap_axi' and 'int')
        OUT[i] = IN[i] + 0xFF;
                 ~~~~~ ^ ~~~~
...
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2020.1 (64-bit)
Copyright 1986-2020 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'my_hardware_accelerator/my_code.cpp' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:05 ; elapsed = 00:00:23 . Memory (MB): peak = 954.980 ; gain = 861.906
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:05 ; elapsed = 00:00:23 . Memory (MB): peak = 954.980 ; gain = 861.906
INFO: [HLS 200-10] Starting code transformations ...
ERROR: [SYNCHK 200-79] Cannot find the top function 'my_hardware_accelerator' in the design. Possible causes are: (1) the top function name is misspelled; (2) the top function is nonexistent or declared as static.
ERROR: [HLS 200-70] Synthesizability check failed.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2020.1 (64-bit)
Copyright 1986-2020 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'my_hardware_accelerator/my_code.cpp' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:06 ; elapsed = 00:00:25 . Memory (MB): peak = 955.305 ; gain = 859.152
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:06 ; elapsed = 00:00:25 . Memory (MB): peak = 955.305 ; gain = 859.152
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:06 ; elapsed = 00:00:26 . Memory (MB): peak = 955.305 ; gain = 859.152
INFO: [HLS 200-10] Checking synthesizability ...
INFO: [HLS 200-111] Finished Checking Synthesizability Time (s): cpu = 00:00:06 ; elapsed = 00:00:26 . Memory (MB): peak = 955.305 ; gain = 859.152
WARNING: [XFORM 203-1103] Ignored data pack directive on non-struct variable 'OUT.data.V' (my_hardware_accelerator/my_code.cpp:16).
WARNING: [XFORM 203-1103] Ignored data pack directive on non-struct variable 'IN.data.V' (my_hardware_accelerator/my_code.cpp:16).
INFO: [HLS 200-111] Finished Pre-synthesis Time (s): cpu = 00:00:06 ; elapsed = 00:00:26 . Memory (MB): peak = 955.305 ; gain = 859.152
INFO: [HLS 200-111] Finished Architecture Synthesis Time (s): cpu = 00:00:06 ; elapsed = 00:00:26 . Memory (MB): peak = 955.305 ; gain = 859.152
INFO: [HLS 200-10] Starting hardware synthesis ...
INFO: [HLS 200-10] Synthesizing 'hardware_accelerator' ...
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-42] -- Implementing module 'hardware_accelerator' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [SCHED 204-11] Starting scheduling ...
INFO: [SCHED 204-11] Finished scheduling.
INFO: [HLS 200-111]  Elapsed time: 26.575 seconds; current allocated memory: 108.368 MB.
INFO: [BIND 205-100] Starting micro-architecture generation ...
INFO: [BIND 205-101] Performing variable lifetime analysis.
INFO: [BIND 205-101] Exploring resource sharing.
INFO: [BIND 205-101] Binding ...
INFO: [BIND 205-100] Finished micro-architecture generation.
INFO: [HLS 200-111]  Elapsed time: 0.113 seconds; current allocated memory: 108.472 MB.
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-10] -- Generating RTL for module 'hardware_accelerator' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [RTGEN 206-500] Setting interface mode on port 'hardware_accelerator/IN_data_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'hardware_accelerator/IN_keep_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'hardware_accelerator/IN_last_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'hardware_accelerator/OUT_data_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'hardware_accelerator/OUT_keep_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on port 'hardware_accelerator/OUT_last_V' to 'axis' (register, both mode).
INFO: [RTGEN 206-500] Setting interface mode on function 'hardware_accelerator' to 'ap_ctrl_hs'.
INFO: [RTGEN 206-100] Finished creating RTL model for 'hardware_accelerator'.
INFO: [HLS 200-111]  Elapsed time: 0.187 seconds; current allocated memory: 108.773 MB.
INFO: [HLS 200-790] **** Loop Constraint Status: All loop constraints were satisfied.
INFO: [HLS 200-789] **** Estimated Fmax: 391.85 MHz
INFO: [HLS 200-111] Finished generating all RTL models Time (s): cpu = 00:00:07 ; elapsed = 00:00:29 . Memory (MB): peak = 955.305 ; gain = 859.152
INFO: [VHDL 208-304] Generating VHDL RTL for hardware_accelerator.
INFO: [VLOG 209-307] Generating Verilog RTL for hardware_accelerator.
INFO: [HLS 200-112] Total elapsed time: 28.954 seconds; peak allocated memory: 108.773 MB.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2020.1 (64-bit)
Copyright 1986-2020 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [IMPL 213-8] Exporting RTL as a Vivado IP.
INFO: [IMPL 213-8] Starting RTL evaluation using Vivado ...
